  31 August 2015
Updated case conversion with latest UnicodeData.txt (09-Feb-2015 20:08).
See http://www.unicode.org/Public/UNIDATA/UnicodeData.txt.

  21 July 2015 - 6.194
If defined with -DPYTHONINTERFACE and -DBRACMATEMBEDDED you can now make a
Python module called 'prythat'. From Python you call (in this order)
    prythat.init()
    prythat.HolyGrail(string containing Bracmat expression)
    prythat.final()
The HolyGrail can be called any number of times.
From Bracmat you can call back to Python with the functions 
    Ni$"String with Python statements"
and Ni!$"String with a Python expression"
Only the function Ni! returns a value back from Python.
The subdirectory src/Python contains the Cython source file to 
construct the Python module, together with Bracmat's C source.
That subdirectory also contains a file launch.py that tests and
demonstrates the prythat module.
 

  17 April 2015
XML: New predefined functions for nesting data and for converting data back
to XML format.
    MLencoding - detects encoding in XML or HTML file
    nestML     - nest the internal representation of XML data
    toML       - convert internal representation of XML data to a string
                 containing XML data
HTML is supported, although nestML may still make wrong guesses.

  17 October 2014
Return -1 if an argument cannot be evaluated.

  24 September
Made handling of unquoted attributes in html elements more forgiving. Added
form feed to list of white space characters in html/xml parsing.

  23 September
xml.c: Fixed bugs in handling close tags inside script (or style) cdata.
Removed allowance for white space between < / and element name.
(Between / and > white space is still allowed. This is not comme il faut.)
Removed possibility of close tag without name like so: </> or: </ p>

   7 September 2014
Changed JSON object mapping. 
    {} is (0,)
    {"key":123} is ((key.123),)
    {"k1":true,"K2":"key 2"} is ((K2..key 2)+(k1.true),)
So [] becomes (,)